fixed some spacing issues

--- a/src/components/styles/OwnYourTeam.scss
+++ b/src/components/styles/OwnYourTeam.scss
@@ -157,7 +157,6 @@
 
 .imageParagraph span {
   color: white;
-  line-height: 50px;
   font-size: 1.2vw;
   font-style: italic;
   font-weight: 700;
